# hypixel_api

./: .env  Cargo.toml
src/: items.rs  main.rs  page.rs
static/: index.html
